# deepresearch

./: .gitignore  README.md  pyproject.toml  分阶段改进执行计划.md  新项目功能总结与迁移建议.md  项目日志.md
configs/: baseline.yaml  default.yaml  geo_mvp.yaml  geo_real_search.yaml
docs/: repository_hygiene.md
docs/demo/: sample_report_excerpt.md
scripts/: create_domain_adapter.py  run_geo_integration_demo.py  run_memory_two_run_demo.py  run_single.py
src/agents/: base_agent.py  prompt_builder.py  researcher.py  summarizer.py  tool_calling_loop.py  tool_context.py  tool_registry.py
src/core/: domain_profiles.py  runner.py
src/domain_adapters/: __init__.py  base.py  declarative.py  registry.py
src/domain_adapters/builtin/: __init__.py  general.py  geo_remote_sensing.py
src/evidence/: evidence_store.py
src/memory/: memory_store.py
src/models/: __init__.py  model_factory.py  model_router.py  policy_adapter.py  vllm_policy.py
src/observability/: __init__.py  trace_recorder.py  usage.py
src/orchestrator/: agent_pool.py  interaction.py  orchestrator.py  schemas.py
src/tools/: __init__.py  browser.py  official_doc_fetcher.py  paper_search.py  web_search.py  wiki_search.py
src/utils/: domain_tiers.py  output_language.py  text_cleanup.py  tracing.py
src/wiki/: __init__.py  ingest_worker.py  store.py
tests/: validate_env.py
tests/unit/: test_create_domain_adapter.py  test_domain_adapters.py  test_domain_profiles.py  test_evidence_source_tiers.py  test_external_prefetch.py  test_interaction_progress.py  test_memory_scope.py  test_model_factory.py  test_official_doc_fetcher.py  test_prompt_builder.py  test_run_geo_integration_demo.py  test_source_tiers.py  test_summarizer_confidence.py  test_text_cleanup.py  test_tool_calling_loop_trace.py  test_tool_context_compact.py  test_tool_profiles.py  test_web_search_ranking.py  test_wiki_ingest_gate.py  test_wiki_store.py
