[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-research-agent"
version = "0.1.0"
description = "Evidence-aware DeepResearch agent with configurable general and GIS/remote-sensing domain profiles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GeoResearch Agent Contributors"},
]
keywords = ["deep-research", "agent", "llm", "gis", "remote-sensing", "evidence", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
    "transformers>=4.40",
    "torch>=2.0",
    "numpy",
    "aiohttp",
    "pyyaml",
    "python-dotenv>=1.0",
    "sentence-transformers",
    "networkx",
    "scikit-learn",
    "tqdm",
    "datasets",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
serve = [
    "vllm>=0.4.0",
]
train = [
    "peft>=0.11.0",
    "accelerate>=0.30.0",
    "deepspeed>=0.14.0",
    "wandb",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "flake8",
]
all = [
    "geo-research-agent[serve,train,dev]",
]

[project.scripts]
run-research = "scripts.run_single:main"
run-eval = "scripts.run_eval:main"
run-ablation = "scripts.run_ablation:main"
run-benchmark = "scripts.run_benchmark:main"
run-judge = "scripts.run_judge:main"
run-evolution = "scripts.run_evolution:main"

[project.urls]
Homepage = "https://github.com/your-name/geo-research-agent"
Repository = "https://github.com/your-name/geo-research-agent"
Issues = "https://github.com/your-name/geo-research-agent/issues"

[tool.setuptools]
packages = ["src", "evaluation", "scripts", "configs"]

[tool.setuptools.package-data]
configs = ["*.yaml", "**/*.yaml"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
